--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && scp -r ./build/* haze@158.160.47.223:/home/haze/frontend"
   },
   "eslintConfig": {
     "extends": [
